Fixed some alignment issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -279,26 +279,26 @@ h2 {
 }
 
 .sidebarListItem {
-font-family: montserrat, sans-serif;
-font-size: 22px;
-text-transform: uppercase;
-font-weight: 200;
-position: static;
-list-style: none;
-margin: 8px;
-display: flex;
-justify-content: left;
+  font-family: montserrat, sans-serif;
+  font-size: 22px;
+  text-transform: uppercase;
+  font-weight: 200;
+  position: static;
+  list-style: none;
+  padding: 5px;
+  display: inline-block;
+  width: 90%;
 }
 
 .sidebarListItem:hover {
-text-decoration: underline;
-cursor: pointer;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 #relatedArtistsSection p {
-font-size: 26px;
-text-transform: uppercase;
-font-weight: 200;
+  font-size: 26px;
+  text-transform: uppercase;
+  font-weight: 200;
 }
 /*</editor-fold>*/
 
